# KaleidoscopePractice

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  GPATH  GRTAGS  GTAGS  Makefile  Makefile~  README.md  cmake_install.cmake  toy  toy.cpp  toy.cpp~
